# schedule-concierge

./: .gitignore  .mailmap  CLAUDE.md  CONTRIBUTORS.md
.github/workflows/: claude.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250813_0001_initial.py  20250813_0002_integration_accounts.py  20250813_0003_token_encryption_columns.py
backend/app/: errors.py  main.py
backend/app/adapters/: google_calendar_provider.py
backend/app/api/: auth.py  calendars.py  events.py  integrations.py  oauth.py  slots.py  tasks.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: enums.py
backend/app/ports/: calendar_provider.py
backend/app/repositories/: calendar_repository.py  event_repository.py
backend/app/services/: auth_service.py  conflict_service.py  demo_user.py  encryption_service.py  event_service.py  google_calendar_service.py  nlp_service.py  oauth_service.py  recommendation_service.py  state_store.py  task_service.py
backend/app/usecases/: sync_calendars.py  sync_events.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_conflict_api.py  test_event_validation.py  test_events_api.py  test_focus_protection.py  test_google_integration.py  test_metrics_and_errors.py  test_nlp_api.py  test_nlp_commit_api.py  test_tasks_and_slots.py
backend/tests/unit/: test_conflict_detection.py  test_event_service.py  test_improved_recommendation.py  test_nlp_edges.py  test_nlp_energy_tag.py  test_oauth_state_management.py  test_recommendation_service.py  test_sync_usecases.py
docs/: AI_ASSISTANTS.md  api-reference.md  architecture.md  frontend-design.md  status-report.md  technical-spec.md  usecases-detail.md  user-guide.md
frontend/: .env.example  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
frontend/.next/: prerender-manifest.json  trace
frontend/components/: CalendarManager.tsx  EventManager.tsx  GoogleCalendarIntegration.tsx  SlotRecommendation.tsx  TaskManager.tsx
frontend/pages/: index.tsx
frontend/services/: api-client.ts
(+24 files in other folders)
