[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-concierge"
version = "0.1.0"
description = "Schedule Concierge Backend"
authors = [ { name="Team" } ]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.6.0",
  "sqlalchemy>=2.0.28",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.1",
  "prometheus-client>=0.20.0",
  "python-dateutil>=2.9.0.post0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.5",
  "httpx>=0.27.0",
  "coverage>=7.4.0"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q --maxfail=1"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
